Fixing h1 on smaller devices again

--- a/public/master.css
+++ b/public/master.css
@@ -704,7 +704,6 @@ a.bottomLinks {
   }
   .header h1 {
     font-size: 2rem;
-    margin-left: -50px;
   }
   .subhead {
     font-size: 1.15em;
