--- a/public/portfolio/master.css
+++ b/public/portfolio/master.css
@@ -953,7 +953,6 @@ ul {
   }
   .header h1 {
     font-size: 2rem;
-    margin-left: -50px;
   }
   .wide {
     width: 80vw;
